--- a/Outils_info/Tp4/src/CMakeLists.txt
+++ b/Outils_info/Tp4/src/CMakeLists.txt
@@ -11,12 +11,13 @@ INCLUDE(${SWIG_USE_FILE})
 FIND_PACKAGE(PythonLibs)
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+set(TCL_INCLUDE_PATH "/usr/include/tcl")
+INCLUDE_DIRECTORIES(${TCL_INCLUDE_PATH})
 
-SET(CMAKE_SWIG_FLAGS "")
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 
 SET_SOURCE_FILES_PROPERTIES(main.i PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES(main.i PROPERTIES SWIG_FLAGS "-includeall")
-SWIG_ADD_MODULE(main python main.i main_wrap.cxx)
-SWIG_LINK_LIBRARIES(main ${PYTHON_LIBRARIES})
+SWIG_ADD_MODULE(myModuleCmake python main.i main_wrap.cxx)
+SWIG_LINK_LIBRARIES(myModuleCmake ${PYTHON_LIBRARIES})
 
