--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Visualisation/build-QT-Desktop-Debug/*
 HPC/projet/Jeux-echec/*.pro.user
 HPC/projet/Jeux-echec/*.pro.user.*
 HPC/projet/build-Jeux-echec-Desktop-Debug/*
+Modelisation_surfacique_ulysse/TP1/build/*
