--- a/HPC/projet/build-Jeux-echec-Desktop-Debug/Makefile
+++ b/HPC/projet/build-Jeux-echec-Desktop-Debug/Makefile
@@ -57,7 +57,8 @@ SOURCES       = ../Jeux-echec/main.cpp \
 		../Jeux-echec/tour.cpp \
 		../Jeux-echec/pion.cpp \
 		../Jeux-echec/coup.cpp \
-		../Jeux-echec/casePlateau.cpp moc_mainwindow.cpp
+		../Jeux-echec/casePlateau.cpp qrc_ressources.cpp \
+		moc_mainwindow.cpp
 OBJECTS       = main.o \
 		mainwindow.o \
 		ia_alphabeta.o \
@@ -71,6 +72,7 @@ OBJECTS       = main.o \
 		pion.o \
 		coup.o \
 		casePlateau.o \
+		qrc_ressources.o \
 		moc_mainwindow.o
 DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/shell-unix.conf \
@@ -133,6 +135,7 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf \
 		../Jeux-echec/Jeux-echec.pro \
+		../Jeux-echec/ressources.qrc \
 		../Jeux-echec/Jeux-echec.pro
 QMAKE_TARGET  = Jeux-echec
 DESTDIR       = #avoid trailing-slash linebreak
@@ -228,6 +231,7 @@ Makefile: ../Jeux-echec/Jeux-echec.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/lin
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf \
 		../Jeux-echec/Jeux-echec.pro \
+		../Jeux-echec/ressources.qrc \
 		/usr/lib/x86_64-linux-gnu/libQt5Widgets.prl \
 		/usr/lib/x86_64-linux-gnu/libQt5Gui.prl \
 		/usr/lib/x86_64-linux-gnu/libQt5Core.prl
@@ -293,6 +297,7 @@ Makefile: ../Jeux-echec/Jeux-echec.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/lin
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf:
 ../Jeux-echec/Jeux-echec.pro:
+../Jeux-echec/ressources.qrc:
 /usr/lib/x86_64-linux-gnu/libQt5Widgets.prl:
 /usr/lib/x86_64-linux-gnu/libQt5Gui.prl:
 /usr/lib/x86_64-linux-gnu/libQt5Core.prl:
@@ -303,7 +308,7 @@ qmake_all: FORCE
 
 dist: 
 	@test -d .tmp/Jeux-echec1.0.0 || mkdir -p .tmp/Jeux-echec1.0.0
-	$(COPY_FILE) --parents $(SOURCES) $(DIST) .tmp/Jeux-echec1.0.0/ && $(COPY_FILE) --parents ../Jeux-echec/mainwindow.h ../Jeux-echec/ia_alphabeta.h ../Jeux-echec/pieces.h ../Jeux-echec/plateau.h ../Jeux-echec/roi.h ../Jeux-echec/reine.h ../Jeux-echec/fou.h ../Jeux-echec/cavalier.h ../Jeux-echec/tour.h ../Jeux-echec/pion.h ../Jeux-echec/coup.h ../Jeux-echec/casePlateau.h .tmp/Jeux-echec1.0.0/ && $(COPY_FILE) --parents ../Jeux-echec/main.cpp ../Jeux-echec/mainwindow.cpp ../Jeux-echec/ia_alphabeta.cpp ../Jeux-echec/pieces.cpp ../Jeux-echec/plateau.cpp ../Jeux-echec/roi.cpp ../Jeux-echec/reine.cpp ../Jeux-echec/fou.cpp ../Jeux-echec/cavalier.cpp ../Jeux-echec/tour.cpp ../Jeux-echec/pion.cpp ../Jeux-echec/coup.cpp ../Jeux-echec/casePlateau.cpp .tmp/Jeux-echec1.0.0/ && $(COPY_FILE) --parents ../Jeux-echec/mainwindow.ui .tmp/Jeux-echec1.0.0/ && (cd `dirname .tmp/Jeux-echec1.0.0` && $(TAR) Jeux-echec1.0.0.tar Jeux-echec1.0.0 && $(COMPRESS) Jeux-echec1.0.0.tar) && $(MOVE) `dirname .tmp/Jeux-echec1.0.0`/Jeux-echec1.0.0.tar.gz . && $(DEL_FILE) -r .tmp/Jeux-echec1.0.0
+	$(COPY_FILE) --parents $(SOURCES) $(DIST) .tmp/Jeux-echec1.0.0/ && $(COPY_FILE) --parents ../Jeux-echec/ressources.qrc .tmp/Jeux-echec1.0.0/ && $(COPY_FILE) --parents ../Jeux-echec/mainwindow.h ../Jeux-echec/ia_alphabeta.h ../Jeux-echec/pieces.h ../Jeux-echec/plateau.h ../Jeux-echec/roi.h ../Jeux-echec/reine.h ../Jeux-echec/fou.h ../Jeux-echec/cavalier.h ../Jeux-echec/tour.h ../Jeux-echec/pion.h ../Jeux-echec/coup.h ../Jeux-echec/casePlateau.h .tmp/Jeux-echec1.0.0/ && $(COPY_FILE) --parents ../Jeux-echec/main.cpp ../Jeux-echec/mainwindow.cpp ../Jeux-echec/ia_alphabeta.cpp ../Jeux-echec/pieces.cpp ../Jeux-echec/plateau.cpp ../Jeux-echec/roi.cpp ../Jeux-echec/reine.cpp ../Jeux-echec/fou.cpp ../Jeux-echec/cavalier.cpp ../Jeux-echec/tour.cpp ../Jeux-echec/pion.cpp ../Jeux-echec/coup.cpp ../Jeux-echec/casePlateau.cpp .tmp/Jeux-echec1.0.0/ && $(COPY_FILE) --parents ../Jeux-echec/mainwindow.ui .tmp/Jeux-echec1.0.0/ && (cd `dirname .tmp/Jeux-echec1.0.0` && $(TAR) Jeux-echec1.0.0.tar Jeux-echec1.0.0 && $(COMPRESS) Jeux-echec1.0.0.tar) && $(MOVE) `dirname .tmp/Jeux-echec1.0.0`/Jeux-echec1.0.0.tar.gz . && $(DEL_FILE) -r .tmp/Jeux-echec1.0.0
 
 
 clean:compiler_clean 
@@ -324,8 +329,25 @@ mocables: compiler_moc_header_make_all compiler_moc_source_make_all
 
 check: first
 
-compiler_rcc_make_all:
+compiler_rcc_make_all: qrc_ressources.cpp
 compiler_rcc_clean:
+	-$(DEL_FILE) qrc_ressources.cpp
+qrc_ressources.cpp: ../Jeux-echec/ressources.qrc \
+		../Jeux-echec/images/n1.png \
+		../Jeux-echec/images/b3.png \
+		../Jeux-echec/images/n5.png \
+		../Jeux-echec/images/b2.png \
+		../Jeux-echec/images/n4.png \
+		../Jeux-echec/images/b6.png \
+		../Jeux-echec/images/plateau.png \
+		../Jeux-echec/images/b1.png \
+		../Jeux-echec/images/n3.png \
+		../Jeux-echec/images/b5.png \
+		../Jeux-echec/images/n2.png \
+		../Jeux-echec/images/b4.png \
+		../Jeux-echec/images/n6.png
+	/usr/lib/x86_64-linux-gnu/qt5/bin/rcc -name ressources ../Jeux-echec/ressources.qrc -o qrc_ressources.cpp
+
 compiler_moc_header_make_all: moc_mainwindow.cpp
 compiler_moc_header_clean:
 	-$(DEL_FILE) moc_mainwindow.cpp
@@ -460,7 +482,7 @@ compiler_yacc_impl_make_all:
 compiler_yacc_impl_clean:
 compiler_lex_make_all:
 compiler_lex_clean:
-compiler_clean: compiler_moc_header_clean compiler_uic_clean 
+compiler_clean: compiler_rcc_clean compiler_moc_header_clean compiler_uic_clean 
 
 ####### Compile
 
@@ -703,7 +725,55 @@ mainwindow.o: ../Jeux-echec/mainwindow.cpp ../Jeux-echec/mainwindow.h \
 		/usr/include/qt5/QtWidgets/QGraphicsScene \
 		/usr/include/qt5/QtWidgets/qgraphicsscene.h \
 		/usr/include/qt5/QtGui/qpen.h \
-		ui_mainwindow.h
+		ui_mainwindow.h \
+		/usr/include/qt5/QtCore/QVariant \
+		/usr/include/qt5/QtWidgets/QAction \
+		/usr/include/qt5/QtWidgets/qaction.h \
+		/usr/include/qt5/QtWidgets/qactiongroup.h \
+		/usr/include/qt5/QtWidgets/QApplication \
+		/usr/include/qt5/QtWidgets/qapplication.h \
+		/usr/include/qt5/QtCore/qcoreapplication.h \
+		/usr/include/qt5/QtCore/qeventloop.h \
+		/usr/include/qt5/QtWidgets/qdesktopwidget.h \
+		/usr/include/qt5/QtGui/qguiapplication.h \
+		/usr/include/qt5/QtGui/qinputmethod.h \
+		/usr/include/qt5/QtWidgets/QButtonGroup \
+		/usr/include/qt5/QtWidgets/qbuttongroup.h \
+		/usr/include/qt5/QtWidgets/QGraphicsView \
+		/usr/include/qt5/QtWidgets/qgraphicsview.h \
+		/usr/include/qt5/QtGui/qpainter.h \
+		/usr/include/qt5/QtGui/qtextoption.h \
+		/usr/include/qt5/QtWidgets/qscrollarea.h \
+		/usr/include/qt5/QtWidgets/qabstractscrollarea.h \
+		/usr/include/qt5/QtWidgets/qframe.h \
+		/usr/include/qt5/QtWidgets/QHBoxLayout \
+		/usr/include/qt5/QtWidgets/qboxlayout.h \
+		/usr/include/qt5/QtWidgets/qlayout.h \
+		/usr/include/qt5/QtWidgets/qlayoutitem.h \
+		/usr/include/qt5/QtWidgets/qgridlayout.h \
+		/usr/include/qt5/QtWidgets/QHeaderView \
+		/usr/include/qt5/QtWidgets/qheaderview.h \
+		/usr/include/qt5/QtWidgets/qabstractitemview.h \
+		/usr/include/qt5/QtCore/qabstractitemmodel.h \
+		/usr/include/qt5/QtCore/qitemselectionmodel.h \
+		/usr/include/qt5/QtWidgets/qabstractitemdelegate.h \
+		/usr/include/qt5/QtWidgets/qstyleoption.h \
+		/usr/include/qt5/QtWidgets/qabstractspinbox.h \
+		/usr/include/qt5/QtGui/qvalidator.h \
+		/usr/include/qt5/QtCore/qregularexpression.h \
+		/usr/include/qt5/QtWidgets/qslider.h \
+		/usr/include/qt5/QtWidgets/qabstractslider.h \
+		/usr/include/qt5/QtWidgets/qstyle.h \
+		/usr/include/qt5/QtWidgets/qtabbar.h \
+		/usr/include/qt5/QtWidgets/qrubberband.h \
+		/usr/include/qt5/QtWidgets/QMenuBar \
+		/usr/include/qt5/QtWidgets/qmenubar.h \
+		/usr/include/qt5/QtWidgets/qmenu.h \
+		/usr/include/qt5/QtWidgets/QStatusBar \
+		/usr/include/qt5/QtWidgets/qstatusbar.h \
+		/usr/include/qt5/QtWidgets/QToolBar \
+		/usr/include/qt5/QtWidgets/qtoolbar.h \
+		/usr/include/qt5/QtWidgets/QWidget
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o mainwindow.o ../Jeux-echec/mainwindow.cpp
 
 ia_alphabeta.o: ../Jeux-echec/ia_alphabeta.cpp ../Jeux-echec/ia_alphabeta.h \
@@ -1418,6 +1488,9 @@ casePlateau.o: ../Jeux-echec/casePlateau.cpp ../Jeux-echec/casePlateau.h \
 		/usr/include/qt5/QtCore/qregexp.h \
 		/usr/include/qt5/QtCore/qstringmatcher.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o casePlateau.o ../Jeux-echec/casePlateau.cpp
+
+qrc_ressources.o: qrc_ressources.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o qrc_ressources.o qrc_ressources.cpp
 
 moc_mainwindow.o: moc_mainwindow.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_mainwindow.o moc_mainwindow.cpp
