--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ Visualisation/build-QT-Desktop-Debug/*
 HPC/projet/Jeux-echec/*.pro.user
 HPC/projet/Jeux-echec/*.pro.user.*
 HPC/projet/build-Jeux-echec-Desktop-Debug/*
+HPC/projet/build-Jeux-echec-Desktop-Debug/*.o
 Modelisation_surfacique_ulysse/TP1/build/*
