--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ HPC/projet/Jeux-echec/*.pro.user.*
 HPC/projet/build-Jeux-echec-Desktop-Debug/*
 HPC/projet/build-Jeux-echec-Desktop-Debug/*.o
 Modelisation_surfacique_ulysse/TP1/build/*
+Modelisation_surfacique_ulysse/TP2/build/*
